# fb-seeder-tool

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  Makefile  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.cjs  tailwind.config.js  vite.config.ts  wdio.conf.ts
.github/workflows/: codeql-analysis.yml  playwright.yml  pr.yml  publish.yml  test-on-pr.yml  version.yml
src/: App.tsx  NoteViewer.tsx  SettingForm.tsx  Welcome.tsx  main.tsx  package.json  store.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fb.rs  lib.rs  main.rs
src/components/: AssignTag.tsx  FbGroups.tsx  FbPages.tsx  SimpleEditor.tsx  Stats.tsx  Tags.tsx
src/utils/: api.tsx  emitter.ts  logger.ts
test/pageobjects/: login.page.ts  page.ts  secure.page.ts
test/specs/: example.e2e.ts
tests/: app.spec.ts
