[package]
name = "fb-seeder-tool"
version = "0.1.1"
description = "Effortless Facebook Seeding Tool"
authors = ["Dung Huynh Duc"]
license = "MIT"
repository = "https://github.com/jellydn/fb-seeder-tool"
default-run = "fb-seeder-tool"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=1.5.1", features = [] }

[dependencies]
html2text = "=0.8.0"
log = "=0.4.20"
env_logger = "=0.10.1"
reqwest = { version = "=0.11.23", features = ["json"] }
tokio = { version = "=1.35.1", features = ["full"] }
serde_json = "=1.0.108"
serde = { version = "=1.0.193", features = ["derive"] }
tauri = { version = "=1.5.4", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
