[package]
name = "fb-seeder-tool"
version = "0.1.1"
description = "Effortless Facebook Seeding Tool"
authors = ["Dung Huynh Duc"]
license = "MIT"
repository = "https://github.com/jellydn/fb-seeder-tool"
default-run = "fb-seeder-tool"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=1.5.5", features = [] }

[dependencies]
html2text = "=0.13.2"
log = "=0.4.22"
env_logger = "=0.11.5"
reqwest = { version = "=0.12.8", features = ["json"] }
tokio = { version = "=1.41.0", features = ["full"] }
serde_json = "=1.0.132"
serde = { version = "=1.0.213", features = ["derive"] }
tauri = { version = "=1.8.1", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
